checkout complete implemented and detail order registered, with fixes on z-index layers

--- a/web/css/site.css
+++ b/web/css/site.css
@@ -1,4 +1,8 @@
 .wizard {
-    margin: -40px auto;
+    margin: 40px auto;
     background: #fff;
+}
+
+#iLightbox {
+    z-index: 9987;
 }
